<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bq"
    android:backgroundTint="@color/material_on_surface_disabled"
    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:backgroundTint="#04065C"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="IdentifyTheCarMake"
        android:text="@string/identify_the_car_make"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

    <Button
        android:id="@+id/button3"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:backgroundTint="#04065C"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="Hints"
        android:text="@string/hints"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <Button
        android:id="@+id/button4"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:backgroundTint="#04065C"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="IdentifyTheCar"
        android:text="@string/identify_the_car"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766" />

    <Button
        android:id="@+id/button5"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:backgroundTint="#04065C"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="AdvancedLevel"
        android:text="@string/advanced_level"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="385dp"
        android:layout_height="70dp"
        android:background="@drawable/ferrari4"
        android:backgroundTint="@color/transparent"
        android:fontFamily="serif-monospace"
        android:text="@string/car_quiz"
        android:textAlignment="center"
        android:textColor="#D8EAE4"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="Find and Enjoy"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>